--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <title>Em busca da cidade perdida</title>
 </head>
 <body>
-    
+    <main>
+
+        <div class="passo ativo" id="passo-0">
+            <p>Um dia desses, dentro de um livro da biblioteca da escola</p>
+            <button> class="btn-proximo" </button>
+
+        </div>
+
+    </main>
 </body>
 </html>
